change route to dashboard
